gen_ai/flet/chatbot_ux/gke_service_def.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-sql-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "sql-backend-config"}'
spec:
  type: NodePort
  selector:
    app: chatbot-sql
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
  - name: health
    protocol: TCP
    port: 8081
    targetPort: 8081
