gen_ai/flet/chatbot_ux/gke_ingress_def.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-sql-l7lb-back
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-chatbot-sql-ip-back"
    ingress.gcp.kubernetes.io/pre-shared-cert: "et-certificate"
  labels:
    app: chatbot-sql
spec:
  rules:
  - host: gem-sql.sonrobots.net
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: chatbot-sql-service
            port:
              number: 8000
